# mining-rights-agent

./: README.md
mining-rights-agent/: .dockerignore  .env  Dockerfile  docker-compose.yml  mcp-config.json  pyproject.toml  requirements.txt  test_mcp.py
mining-rights-agent/agent/: main.py  state.py  workflow.py
mining-rights-agent/servers/: news_server.py  price_server.py  reserves_server.py
