[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-rights-agent"
version = "0.1.0"
description = "Mining Rights Daily Report Agent using MCP Protocol"
requires-python = ">=3.10"

[tool.uv]
exclude = [
    "__pycache__",
    "*.pyc",
    ".git",
    "*.egg-info",
    "dist",
    "build",
]

[tool.uv.resolver]
strict = false

[dependencies]
mcp = { extras = ["cli"], version = ">=1.23.0" }
langgraph = ">=0.2.0"
langchain = ">=0.3.0"
anthropic = ">=0.30.0"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"
pydantic = ">=2.0.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
httpx = ">=0.24.0"
langchain-mcp-adapters = ">=0.1.0"
